Modify Chat header and RightPane to completely use online_status and profile_photo data from the conversation object which is stored in state for a faster update on conversation switch; Fix bug of seen event not being emitted after switch from user info screen to ScrollView on mobile/smaller screens; Fix multiple socket initialization bug causing messages to sometimes duplicate; Use the more efficient loopThru func in place of the native for loop in Chat.MiddlePane in order for to prevent redundant loopings through messages.

--- a/teach-me-ui/src/styles/Main/_Chat.MiddlePane.scss
+++ b/teach-me-ui/src/styles/Main/_Chat.MiddlePane.scss
@@ -212,8 +212,12 @@
 
   > *,
   > div {
-    max-width: 35rem;
+    max-width: calc(min(95%, 40rem));
     align-self: center;
+  }
+
+  .new-messages-bar {
+    max-width: calc(min(110%, 42rem)) !important;
   }
 
   &.custom-scroll-bar {
