--- a/teach-me-ui/src/styles/Main/_Chat.scss
+++ b/teach-me-ui/src/styles/Main/_Chat.scss
@@ -81,7 +81,7 @@ body,
     }
 
     .MuiBadge-dot {
-      transition: 0.35s;
+      transition: 0.3s;
       background-color: $error;
     }
   }
